Adicionado Maria Eduarda ao arquivo AUTHORS ref #5

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,15 +4,10 @@
 
 Prof. Dr. Ruben Carlo Benante, @drbeco
 
-=== Group 01: group name ===
+=== Group 01: azaleia ===
 
-* Nome Aluno 1 Completo, @githubuser1
+* Nome Aluno 1 Complei, @githubuser1
 * Nome Aluno 2 Completo, @githubuser2
 * ...
-
-=== Group 02: group name ===
-
-* Nome Aluno 1 Completo, @githubuser1
-* Nome Aluno 2 Completo, @githubuser2
-* ...
+* Maria Eduarda Azevedo Saraiva de Moraes, @eduardasaraiva
 
