Adicionado Bernardo Moreira a AUTHORS, ref #5

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Prof. Dr. Ruben Carlo Benante, @drbeco
 
 === Group 01: azaleia ===
 
-* Nome Aluno 1 Complei, @githubuser1
+* Bernardo de Azevedo Moreira, @BAMoreira
 * Nome Aluno 2 Completo, @githubuser2
 * ...
 * Maria Eduarda Azevedo Saraiva de Moraes, @eduardasaraiva
