adicionado Daidson Fonseca Alves ao arquivo AUTHORS ref #5

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ Prof. Dr. Ruben Carlo Benante, @drbeco
 === Group 01: azaleia ===
 
 * Bernardo de Azevedo Moreira, @BAMoreira
-* Nome Aluno 2 Completo, @githubuser2
+* Daidson Fonseca Alves, @daidson    
 * ...
 * Maria Eduarda Azevedo Saraiva de Moraes, @eduardasaraiva
 
