Adicionado Douglas Azevedo ao AUTHORS fix #5

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,6 @@ Prof. Dr. Ruben Carlo Benante, @drbeco
 
 * Bernardo de Azevedo Moreira, @BAMoreira
 * Daidson Fonseca Alves, @daidson    
-* ...
+* Douglas Azevedo Pereira Dantas, @DodoAz
 * Maria Eduarda Azevedo Saraiva de Moraes, @eduardasaraiva
 
